@@ -1,16 +1,13 @@
 package miu.edu.mpp.hdk.dao;
 
+import miu.edu.mpp.hdk.dao.impl.DataAccessFacade;
 import miu.edu.mpp.hdk.dao.impl.DataAccessFactory;
-import miu.edu.mpp.hdk.model.Address;
+import miu.edu.mpp.hdk.enums.DataAccessType;
 import miu.edu.mpp.hdk.model.Author;
 import miu.edu.mpp.hdk.model.Book;
 import miu.edu.mpp.hdk.model.LibraryMember;
-import miu.edu.mpp.hdk.dao.impl.DataAccessFacade;
-import miu.edu.mpp.hdk.enums.Auth;
-import miu.edu.mpp.hdk.model.User;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -23,14 +20,15 @@ import java.util.List;
  */
 public class TestData {
 
+    static DataAccessFacade facade = (DataAccessFacade) DataAccessFactory.createDataAccess(DataAccessType.FACADE);
+
     public static void main(String[] args) {
         TestData td = new TestData();
         td.bookData();
         td.libraryMemberData();
         td.userData();
-        DataAccess da = new DataAccessFacade();
-        System.out.println(da.readBooksMap());
-        System.out.println(da.readUserMap());
+        System.out.println(facade.readBooksMap());
+        System.out.println(facade.readUserMap());
     }
 
     ///create books
@@ -41,69 +39,50 @@ public class TestData {
         allBooks.get(3).addCopy();
         allBooks.get(2).addCopy();
         allBooks.get(2).addCopy();
-        DataAccessFactory.defaultDataAccess().loadBookMap(allBooks);
+        facade.loadBookMap(allBooks);
     }
 
     public void userData() {
-        DataAccessFactory.defaultDataAccess().loadUserMap(allUsers);
+        facade.loadUserMap(DataConstant.allUsers);
     }
 
     //create library members
     public void libraryMemberData() {
-        LibraryMember libraryMember = new LibraryMember("1001", "Andy", "Rogers", "641-223-2211", addresses.get(4));
+
+        LibraryMember libraryMember = new LibraryMember("1001", "Andy", "Rogers", "641-223-2211", DataConstant.addresses.get(4));
         members.add(libraryMember);
-        libraryMember = new LibraryMember("1002", "Drew", "Stevens", "702-998-2414", addresses.get(5));
+        libraryMember = new LibraryMember("1002", "Drew", "Stevens", "702-998-2414", DataConstant.addresses.get(5));
         members.add(libraryMember);
 
-        libraryMember = new LibraryMember("1003", "Sarah", "Eagleton", "451-234-8811", addresses.get(6));
+        libraryMember = new LibraryMember("1003", "Sarah", "Eagleton", "451-234-8811", DataConstant.addresses.get(6));
         members.add(libraryMember);
 
-        libraryMember = new LibraryMember("1004", "Ricardo", "Montalbahn", "641-472-2871", addresses.get(7));
+        libraryMember = new LibraryMember("1004", "Ricardo", "Montalbahn", "641-472-2871", DataConstant.addresses.get(7));
         members.add(libraryMember);
 
-        DataAccessFactory.defaultDataAccess().loadMemberMap(members);
+        facade.loadMemberMap(members);
     }
 
     ///////////// DATA //////////////
     List<LibraryMember> members = new ArrayList<>();
 
-    List<Address> addresses = new ArrayList<>() {
+    List<Author> allAuthors = new ArrayList<>() {
         {
-            add(new Address("101 S. Main", "Fairfield", "IA", "52556"));
-            add(new Address("51 S. George", "Georgetown", "MI", "65434"));
-            add(new Address("23 Headley Ave", "Seville", "Georgia", "41234"));
-            add(new Address("1 N. Baton", "Baton Rouge", "LA", "33556"));
-            add(new Address("5001 Venice Dr.", "Los Angeles", "CA", "93736"));
-            add(new Address("1435 Channing Ave", "Palo Alto", "CA", "94301"));
-            add(new Address("42 Dogwood Dr.", "Fairfield", "IA", "52556"));
-            add(new Address("501 Central", "Mountain View", "CA", "94707"));
-        }
-    };
-
-    public List<Author> allAuthors = new ArrayList<>() {
-        {
-            add(new Author("Joe", "Thomas", "641-445-2123", addresses.get(0), "A happy man is he."));
-            add(new Author("Sandra", "Thomas", "641-445-2123", addresses.get(0), "A happy wife is she."));
-            add(new Author("Nirmal", "Pugh", "641-919-3223", addresses.get(1), "Thinker of thoughts."));
-            add(new Author("Andrew", "Cleveland", "976-445-2232", addresses.get(2), "Author of childrens' books."));
-            add(new Author("Sarah", "Connor", "123-422-2663", addresses.get(3), "Known for her clever style."));
+            add(new Author("Joe", "Thomas", "641-445-2123", DataConstant.addresses.get(0), "A happy man is he."));
+            add(new Author("Sandra", "Thomas", "641-445-2123", DataConstant.addresses.get(0), "A happy wife is she."));
+            add(new Author("Nirmal", "Pugh", "641-919-3223", DataConstant.addresses.get(1), "Thinker of thoughts."));
+            add(new Author("Andrew", "Cleveland", "976-445-2232", DataConstant.addresses.get(2), "Author of childrens' books."));
+            add(new Author("Sarah", "Connor", "123-422-2663", DataConstant.addresses.get(3), "Known for her clever style."));
         }
     };
 
     List<Book> allBooks = new ArrayList<>() {
         {
-            add(new Book("23-11451", "The Big Fish", 21, Arrays.asList(allAuthors.get(0), allAuthors.get(1))));
-            add(new Book("28-12331", "Antartica", 7, Arrays.asList(allAuthors.get(2))));
-            add(new Book("99-22223", "Thinking Java", 21, Arrays.asList(allAuthors.get(3))));
-            add(new Book("48-56882", "Jimmy's First Day of School", 7, Arrays.asList(allAuthors.get(4))));
+            add(new Book("23-11451", "The Big Fish", 21, List.of(allAuthors.get(0), allAuthors.get(1))));
+            add(new Book("28-12331", "Antartica", 7, List.of(allAuthors.get(2))));
+            add(new Book("99-22223", "Thinking Java", 21, List.of(allAuthors.get(3))));
+            add(new Book("48-56882", "Jimmy's First Day of School", 7, List.of(allAuthors.get(4))));
         }
     };
 
-    List<User> allUsers = new ArrayList<>() {
-        {
-            add(new User("101", "xyz", Auth.LIBRARIAN));
-            add(new User("102", "abc", Auth.ADMIN));
-            add(new User("103", "111", Auth.BOTH));
-        }
-    };
 }
